[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fo-core"
version = "2.0.0-alpha.3"
description = "Streamlined CLI file organizer powered by local AI (Ollama)"
authors = [
    {name = "fo-core Team", email = "noreply@example.com"}
]
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.11"
keywords = ["file-management", "ai", "organization", "local-llm", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core AI inference
    "ollama>=0.1.0",  # 0.x — unstable API, keep >=

    # File processing
    "Pillow~=12.2",
    "PyMuPDF~=1.23",           # PDF text/image extraction
    "python-docx~=1.0",        # DOCX parsing
    "openpyxl~=3.1",           # XLSX parsing
    "python-pptx>=0.6.0,<1",   # PPTX parsing
    "ebooklib>=0.18,<1",        # EPUB parsing
    "beautifulsoup4~=4.12",    # HTML/XML parsing
    "lxml~=6.1",               # XML backend for BS4

    # File format support (default)
    "mutagen~=1.47",            # Audio metadata extraction
    "snowballstemmer>=2.2.0",   # Lightweight stemming (no NLTK data download required)
    "striprtf>=0.0.26,<1",      # RTF file text extraction
    "tinytag~=2.2",             # Lightweight audio metadata fallback
    "py7zr>=0.20.0,<2",         # 7Z archive support
    "pypdf~=6.10",              # PDF text extraction fallback
    "rarfile~=4.1",             # RAR archive support (requires unrar tool)

    # CLI
    "typer[all]~=0.12",
    "rich~=13.0",
    "Pygments>=2.20.0",  # Transitive via rich; pin for CVE-2026-4539

    # Database (undo/history)
    "sqlalchemy~=2.0",
    "alembic~=1.13",
    "Mako>=1.3.11",      # Transitive via alembic; pin for GHSA-v92g-xgxw-vvmm (path traversal)

    # Configuration
    "pyyaml~=6.0",
    "platformdirs~=4.9",
    "pydantic~=2.5",
    "pydantic-settings~=2.1",
    "python-dotenv~=1.0",
    "click~=8.1",

    # File watching (daemon)
    "watchdog~=3.0",

    # System utilities
    "psutil>=6.1,<7",

    # Logging
    "loguru>=0.7.0,<1",

    # HTTP client (updater)
    "httpx~=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov~=4.1",
    "pytest-mock~=3.12",
    "pytest-timeout~=2.4.0",  # 2.4.0 regression: timer thread not cancelled on Windows; crashes during teardown (AssertionError in read_global_capture)
    "pytest-xdist~=3.5",
    "pytest-randomly~=3.15",
    "mypy~=1.8,!=1.20.2",  # 1.20.2 regression: INTERNAL ERROR analyzing optional-dep models (llama_cpp_text_model, mlx_text_model) even with ignore_errors override; 1.20.1 works

    "types-PyYAML~=6.0",
    "ruff>=0.1.0",  # 0.x — unstable API, keep >=
    "black~=26.3",
    "isort~=8.0",
    "pre-commit~=3.6",
    "codespell~=2.2",
    "faker~=40.12",
    "pytest-benchmark~=4.0",
    "interrogate~=1.5",  # Docstring coverage measurement
    "pymarkdownlnt>=0.9.25",  # 0.x — unstable API, keep >=; Markdown linting
    "deptry>=0.16.0",  # 0.x — unstable API, keep >=; Unused dependency detection
    "diff-cover~=7.0",  # Diff coverage gate (local pre-commit + CI validation)
]

cloud = [
    "openai~=2.31",  # OpenAI-compatible API provider (OpenAI, Groq, LM Studio, vLLM)
]

llama = [
    # Security note (2026-03-16): diskcache 5.6.3 (GHSA-w8v5-vhqr-4h9v) is a transitive
    # dep of llama-cpp-python. Risk accepted: diskcache is never imported or called by
    # application code. No patched version exists upstream.
    "llama-cpp-python>=0.2.0",  # 0.x — unstable API, keep >=; llama.cpp C bindings
]

mlx = [
    "mlx-lm>=0.0.19,<1; platform_system == 'Darwin'",  # MLX runtime is only supported on Darwin
]

claude = [
    "anthropic>=0.20.0",  # 0.x — unstable API, keep >=; Anthropic Claude API provider
]

media = [
    "faster-whisper~=1.0",
    "torch~=2.1",
    "pydub>=0.25.0,<1",
    "opencv-python~=4.8",
    "scenedetect[opencv]>=0.6.0,<1",
]

dedup-text = [
    "numpy>=1.24,<3",
    "scikit-learn>=1.4,<1.9",
]

dedup-image = [
    "fo-core[dedup-text]",
    "imagededup>=0.3.0,<1",
    "torch~=2.1",
]

scientific = [
    "h5py~=3.10",  # HDF5 file format support
    "netCDF4~=1.6",  # NetCDF file format support
    "scipy~=1.11",  # MATLAB .mat file support
]

cad = [
    "ezdxf~=1.1",  # DXF/DWG CAD file format support
]

build = [
    "pyinstaller~=6.0",  # Cross-platform executable packaging
]

docs = [
    "mkdocs~=1.5",
    "mkdocs-material~=9.5",
    "pymdown-extensions~=10.7",
    "mkdocs-minify-plugin>=0.8.0",  # 0.x — unstable API, keep >=
    "mkdocstrings[python]>=0.24.0",  # 0.x — unstable API, keep >=
]

search = [
    "numpy>=1.24,<3",
    "rank-bm25>=0.2.0",  # 0.x — unstable API, keep >=
    "scikit-learn>=1.4,<1.9",
]

all = [
    "fo-core[dev,cloud,llama,mlx,claude,media,dedup-text,dedup-image,scientific,cad,build,search]",
]

[project.scripts]
fo = "cli:main"

[project.urls]
Homepage = "https://github.com/curdriceaurora/fo-core"
Repository = "https://github.com/curdriceaurora/fo-core"
Issues = "https://github.com/curdriceaurora/fo-core/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"methodologies.para" = ["default_config.yaml"]
# D6: ship the sentiment/keyword lexicon JSON alongside the audio
# module so ``SentimentLexicon.load_default()`` finds it inside an
# installed wheel. Without this declaration ``pip wheel`` omits the
# JSON and ``content_analyzer`` fails at import in installed envs.
"services.audio" = ["data/content_analyzer_lexicon.json"]

# Ruff configuration (linting and formatting)
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".claude/",
    ".venv*/",
    "technical-debt/",
    "fix_coderabbit_issues.py",
    "test_preference_tracker.py",
]
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C901", # mccabe complexity
    "UP",  # pyupgrade
    "D",   # pydocstyle (google convention)
    "RUF100",  # stale noqa comments
    "DTZ",  # datetime timezone rules (DTZ001-DTZ007, DTZ011-DTZ012)
    "PT012",  # pytest-raises-with-multiple-statements
    "PT017",  # assertion-in-except-block (use pytest.raises with `as` capture)
    "PT022",  # pytest-useless-yield-fixture
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ANN401", # **kwargs: Any is acceptable in abstract/polymorphic interfaces
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["D"]
"scripts/**/*.py" = ["D"]
"scripts/docker_utils.py" = ["D", "C901"]

# MyPy configuration (type checking)
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
# striprtf ships no stubs and its `rtf_to_text` function is unannotated; exclude
# calls into it from `disallow_untyped_calls` (both call sites still coerce the
# result via `str(...)` to preserve downstream types). Unblocks CI after PR #167.
untyped_calls_exclude = ["striprtf"]

# Optional-dep model wrappers: mlx_lm and llama_cpp have no stubs and their
# type signatures are only visible when the packages are installed.  The files
# already carry `# pyre-ignore-all-errors` for the same reason.
[[tool.mypy.overrides]]
module = [
    "models.mlx_text_model",
    "models.llama_cpp_text_model",
]
ignore_errors = true

# Optional-dep modules and modules with stubs that vary by mypy version:
# mutagen, ezdxf, redis stubs only available when extras installed; Rich/httpx/
# Pillow/bs4 stubs improved in mypy ≥1.20 so type:ignore comments added for
# 1.19.x become "unused" in CI.  Disable warn_unused_ignores per-module so both
# CI (mypy ~1.20, no extras) and local pre-commit (mypy 1.19.1, with extras) pass.
[[tool.mypy.overrides]]
module = [
    "services.audio.metadata_extractor",
    "utils.readers.cad",
    "events.stream",
    "services.deduplication.extractor",
    "watcher.monitor",
    "watcher.handler",
    "methodologies.para.detection.heuristics",
    "utils.epub_enhanced",
    "cli.dedupe_renderer",
    "cli.interactive",
    "services.deduplication.image_utils",
    "updater.installer",
    "utils.readers",
]
warn_unused_ignores = false

# Pytest configuration
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=95",
    "--timeout=30",
    # Branch coverage baseline (integration tests only):
    # Measured 2026-03-21 via measure-integration-coverage.sh: TOTAL ~49%
    # Enforced floor: 45% branch — lives in .github/workflows/ci.yml (test-integration job).
    # measure-integration-coverage.sh is a local measurement tool only; it does not enforce the floor.
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "ci: marks tests intended for PR CI validation",
    "smoke: marks tests for fast pre-commit validation (<30s total)",
    "no_ollama: marks tests that verify fallback behavior when Ollama is unavailable",
    "regression: marks tests intended for full regression runs",
    "e2e: end-to-end tests against real file trees (no Ollama required)",
    "benchmark: performance benchmark tests (use --benchmark-only to run)",
    "asyncio: marks tests as async (requires pytest-asyncio)",
    "playwright: browser-based E2E tests (requires playwright install chromium; run with --override-ini='addopts=')",
]
filterwarnings = [
    "error::DeprecationWarning:fo",
    "error::PendingDeprecationWarning:fo",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:google",
    "ignore::DeprecationWarning:importlib",
    "ignore::pytest_benchmark.logger.PytestBenchmarkWarning",
]
# pytest-benchmark settings (pass via CLI: --benchmark-min-rounds=3 --benchmark-max-time=30.0)
# benchmark_ prefix keys are NOT supported as ini_options in pytest-benchmark 5.x

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Interrogate configuration (docstring coverage)
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
fail-under = 95
exclude = ["tests", "setup.py", "docs"]
verbose = 1
quiet = false
whitelist-regex = []

# deptry: unused dependency detection
# Run as: deptry src/  (scans source only)
[tool.deptry]
# First-party packages — suppress DEP001 false positives from src-layout
known_first_party = [
    "cli",
    "config",
    "core",
    "daemon",
    "events",
    "history",
    "integrations",
    "interfaces",
    "methodologies",
    "models",
    "optimization",
    "parallel",
    "pipeline",
    "services",
    "undo",
    "updater",
    "utils",
    "watcher",
]
# Only tool-only groups where packages are never imported in application code
pep621_dev_dependency_groups = ["dev", "docs", "build"]
# Map distribution names → import names for packages that differ
[tool.deptry.package_module_name_map]
"Pillow" = "PIL"
"PyMuPDF" = "fitz"
"python-docx" = "docx"
"python-pptx" = "pptx"
"beautifulsoup4" = "bs4"
"pyyaml" = "yaml"
"scikit-learn" = "sklearn"
"opencv-python" = "cv2"
"pydantic-settings" = "pydantic_settings"
"pypdf" = "pypdf"
"striprtf" = "striprtf"
"llama-cpp-python" = "llama_cpp"
"mlx-lm" = "mlx_lm"
[tool.deptry.per_rule_ignores]
# netCDF4: in scientific optional group; deptry has mixed-case matching issues
# redis: optional import via try/except in events/stream.py
DEP001 = ["netCDF4", "redis"]
# lxml: used as bs4 parser string "lxml" (not imported directly)
# python-dotenv: pydantic-settings reads .env files via this package
# alembic: used as CLI migration tool (not imported in application code)
# openpyxl: pandas uses it for Excel I/O (not imported directly)
# fo-core: self-reference in the [all] optional group
DEP002 = [
    "lxml",
    "python-dotenv",
    "alembic",
    "openpyxl",
    "fo-core",
    # pydantic-settings: pydantic's BaseSettings uses it internally; no direct import needed
    "pydantic-settings",
    # netCDF4: mixed-case name causes deptry matching issues; used in scientific.py
    "netCDF4",
    # Pygments: transitive via rich; pinned for CVE-2026-4539
    "Pygments",
    # Mako: transitive via alembic; pinned for security fix in 1.3.11
    "Mako",
    # sqlalchemy: used by alembic migrations and undo/history at runtime; no direct src/ import
    "sqlalchemy",
    # pydantic: used transitively by pydantic-settings; no direct src/ import after refactor
    "pydantic",
]
# redis: optional import via try/except in events/stream.py (transitive dependency)
DEP003 = ["redis"]
