[package]
name = "file-organizer"
version = "2.0.0"
edition = "2021"
license = "MIT"

[lib]
name = "file_organizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
dirs-next = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
